bonus/confs/ingress-hello-iot-bonus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-iot-bonus-ingress
  namespace: dev-bonus
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: hello-iot-bonus.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-iot-service
            port:
              number: 8888
