bonus/confs/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: gitlab-headers
  namespace: gitlab
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
      X-Forwarded-Ssl: "on"
      X-Forwarded-Port: "443"
      X-Forwarded-Host: "gitlab.local"

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab
  namespace: gitlab
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`gitlab.local`)
    services:
      - name: gitlab-webservice-default
        port: 8080
    middlewares:
      - name: gitlab-headers
  tls:
    certResolver: default
